Change dark color style

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                     страницы. Например, основной фон может быть светлым, а текст, хедер, футер, кнопки и другие объекты
                     — тёмными. Всё наоборот в тёмных темах: в них фон делают как можно менее ярким, а всё остальное чуть
                     менее тёмное.</p>
+                <p><b>Также, можно использовать такие цвета: </b></p>
+                <ul>
+                    <li>#161b22</li>
+                    <li>#21262d</li>
+                    <li>rgba(1,4,9,0.8)</li>
+                </ul>
             </article>
         </main>
     </div>
